# athar-ai

./: .env.example  .gitignore  README.md  check_status.py  docker-compose.yml  enhanced_rag_notebook.ipynb  simple_rag_system.py  v1_wikipedia_rag_test.ipynb
.github/workflows/: ci.yml
backend/: Dockerfile  conftest.py  main.py  pyproject.toml  requirements.txt
backend/src/athar/: __init__.py  config.py  evaluation.py  main.py
backend/src/athar/api/: middleware.py
backend/src/athar/api/routes/: admin.py  health.py  query.py
backend/src/athar/ingestion/: __main__.py  fetcher.py  ingest.py
backend/src/athar/models/: schemas.py
backend/src/athar/rag/: cache.py  context_builder.py  error_handling.py  metrics.py  pipeline.py
backend/src/athar/rag/generation/: llm.py
backend/src/athar/rag/preprocessing/: chunker.py
backend/src/athar/rag/retrieval/: bm25_retriever.py  hybrid.py  query_processor.py  reranker.py  semantic.py
backend/tests/: test_api.py  test_evaluation.py  test_retrieval.py  test_semantic_fallback.py
data/: sample_1.json  sample_2.json  sample_3.json  sample_4.json  sample_5.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: AdminDashboard.js  ChatInterface.js  ConversationSidebar.js  DarkChatInterface.js  EnhancedChatInterface.js  EnhancedMessageBubble.js  EnhancedWelcomeScreen.js  Footer.js  Header.js  LearnMorePanel.js  LoadingScreen.js  MessageBubble.js  Sidebar.js  WelcomeScreen.js
frontend/src/components/ui/: avatar.jsx  badge.jsx  button.jsx  card.jsx  input.jsx  progress.jsx  theme-toggle.jsx  tooltip.jsx
frontend/src/contexts/: ThemeContext.js
frontend/src/lib/: utils.js
frontend/src/services/: api.js
scripts/: evaluate_retrieval.py  ingest.py
